--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/etudiant
 spring.datasource.username=root
-spring.datasource.password=Bh1533SY
+    spring.datasource.password=Emiste2020
 
 ## JPA Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
